# InitialArchitectureForMedicalAgent1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  demo.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json  start-dev.cmd  start-dev.ps1  stop-dev.cmd
IPF_Intel_RPL_TP_W11_64_V22102048_20260323R/: AsusSetup.ini  English.ini  French.ini  German.ini  Install.bat  Japanese.ini  Korean.ini  Russian.ini  SChinese.ini  Spanish.ini  TChinese.ini  Ukrainian.ini
app/: main.py
demo/: .env.example  docker-compose.local.yml  dropcollection.py  es.py  es_triage_templates.py  milvus.py  opensearch_disease_kb.py  opensearch_mappings.py  opensearch_rag_kb.py
docs/: DEPLOY_WINDOWS.md  cursor-session-narrative.md  lenovo-vendor-kpi-criteria.md  前端提示词  限期恢复劳动条件通知函.md
front/: index.html  package-lock.json  package.json  tailwind.config.js
front_Web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
hospital_mcp/: server.py
mcp_server/: mock_data.py  server.py
scripts/: add_consultant_review.py  apply_disease_kb_eval_updates.py  batch_clarify_persona.py  build_eval_round_report.py  build_medical_eval_table.py  dev-services.config.ps1  dev-services.ps1  docker-build.ps1  docker-entrypoint.sh  docker-quickstart.ps1  eval_medical_batch.py  eval_round_common.py  export_triage_sessions.py  gen_disease_kb.py  gen_triage_body_kb.py  integration_triage_db.py  merge_eval_recommendations.py  remove-anaconda.ps1  repair_triage_fragments.py  run_all_eval_rounds.py  run_eval_round.py  run_foot_triage_eval.py  run_medical_data_batch.py  setup-windows.ps1  start-api.ps1  stop-api.ps1  summarize_eval_scope_a.py  test_chat_api.py  test_decision_routing.py  test_ner_extract.py  (+11 more)
(+256 files in other folders)
