[project]
name = "medical-triage-agent"
version = "0.1.0"
description = "生产级医院导诊 Agentic 助手"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["medical", "triage", "ai", "agent", "langgraph", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "opensearch-py>=3.2.0",
    "fastapi>=0.129.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.1.10",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-redis>=0.4.0,<0.5.0",
    "langgraph-checkpoint-sqlite>=3.0.0,<4.0.0",
    "langsmith>=0.3.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[project.scripts]
medical-agent = "cli:main"

[tool.uv]
python-preference = "only-managed"

[tool.uv.pip]
compile-bytecode = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
